--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -17,5 +17,11 @@ pipeline {
         sh 'node --version'
       }
     }
+
+    stage('Test'){
+      steps{
+        sh 'ls'
+      }
+    }
   }
 }
