--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -19,6 +19,11 @@ pipeline {
     }
 
     stage('Test'){
+      agent {
+        docker {
+          image 'alpine:latest'
+        }
+      }
       steps{
         sh 'ls'
       }
